# variant

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  LICENSE.md  NOTE.md  NOTES  README.md  TODO  TODO.md  _config.yml  index.html  lib.hpp  library.json
_binary-size/clang-3.5/ctor.fwd.alternatives/: eggs.ctor.fwd.alternatives.json
_binary-size/clang-3.7/ctor.fwd.variants/: eggs.ctor.fwd.variants.json
_binary-size/clang-3.8/ctor.fwd.variants/: mpark.ctor.fwd.variants.json
_binary-size/clang-3.9/ctor.fwd.alternatives/: eggs.ctor.fwd.alternatives.json  index.html  mpark.ctor.fwd.alternatives.json
_binary-size/gcc-5/ctor.fwd.alternatives/: eggs.ctor.fwd.alternatives.json
_binary-size/gcc-5/ctor.fwd.variants/: eggs.ctor.fwd.variants.json  mpark.ctor.fwd.variants.json
_binary-size/gcc-6/ctor.fwd.variants/: mpark.ctor.fwd.variants.json
_binary_size/clang-3.5/ctor.fwd.alternatives/: boost.ctor.fwd.alternatives.json  eggs.ctor.fwd.alternatives.json  index.html  mpark.ctor.fwd.alternatives.json
_binary_size/clang-3.5/ctor.fwd.variants/: boost.ctor.fwd.variants.json  eggs.ctor.fwd.variants.json  index.html  mpark.ctor.fwd.variants.json
_binary_size/clang-3.6/ctor.fwd.alternatives/: anthonyw.ctor.fwd.alternatives.json  boost.ctor.fwd.alternatives.json  eggs.ctor.fwd.alternatives.json  index.html  mapbox.ctor.fwd.alternatives.json  mpark.ctor.fwd.alternatives.json  pdimov.ctor.fwd.alternatives.json
_binary_size/clang-3.6/ctor.fwd.variants/: anthonyw.ctor.fwd.variants.json  boost.ctor.fwd.variants.json  eggs.ctor.fwd.variants.json  index.html  mapbox.ctor.fwd.variants.json  mpark.ctor.fwd.variants.json  pdimov.ctor.fwd.variants.json
_binary_size/clang-3.6/ctor.fwd.vars.1.alts.N/: anthonyw.ctor.fwd.vars.1.alts.N.json  boost.ctor.fwd.vars.1.alts.N.json  eggs.ctor.fwd.vars.1.alts.N.json  index.html  mapbox.ctor.fwd.vars.1.alts.N.json  mpark.ctor.fwd.vars.1.alts.N.json  pdimov.ctor.fwd.vars.1.alts.N.json
_binary_size/clang-3.6/ctor.fwd.vars.N.alts.1/: anthonyw.ctor.fwd.vars.N.alts.1.json  boost.ctor.fwd.vars.N.alts.1.json  eggs.ctor.fwd.vars.N.alts.1.json  index.html  mapbox.ctor.fwd.vars.N.alts.1.json  mpark.ctor.fwd.vars.N.alts.1.json  pdimov.ctor.fwd.vars.N.alts.1.json
cmake/: mpark_variant-config.cmake.in
ctor.fwd/: CMakeLists.txt  anthonyw.cpp.erb  boost.cpp.erb  compile.eggs.cpp.erb  compile.juice.cpp.erb  compile.mapbox.cpp.erb  compile.pdimov.cpp.erb  eggs.cpp.erb  juice.cpp.erb  mapbox.cpp.erb  mpark.cpp.erb  pdimov.cpp.erb  std.cpp.erb
ctor.fwd.alternatives/: CMakeLists.txt  anthonyw.cpp.erb  eggs.cpp.erb  mapbox.cpp.erb  mpark.cpp.erb  std.cpp.erb
ctor.fwd.variants/: CMakeLists.txt  anthonyw.cpp.erb  boost.cpp.erb  eggs.cpp.erb  juice.cpp.erb  mapbox.cpp.erb  mpark.cpp.erb  pdimov.cpp.erb  std.cpp.erb
ctor.fwd.vars.1.alts.N/: CMakeLists.txt  boost.cpp.erb  juice.cpp.erb  pdimov.cpp.erb
ctor.fwd.vars.N.alts.1/: CMakeLists.txt  anthonyw.cpp.erb  boost.cpp.erb  eggs.cpp.erb  juice.cpp.erb  mapbox.cpp.erb  mpark.cpp.erb  pdimov.cpp.erb  std.cpp.erb
ctor.fwd.vars.N.alts.N/: CMakeLists.txt  anthonyw.cpp.erb  boost.cpp.erb  eggs.cpp.erb  juice.cpp.erb  mapbox.cpp.erb  mpark.cpp.erb  pdimov.cpp.erb  std.cpp.erb
dependencies/: anthonyw.cmake  boost.cmake  eggs.cmake  juice.cmake  mapbox.cmake  mpark.cmake  pdimov.cmake  std.cmake
doc/: reference.md
include/: meta  tuple.hpp  variant.hpp
include/exp/: functional.hpp  return.hpp  tuple.hpp  type_traits.hpp
include/experimental/: __lib.hpp  lib.hpp  monostate.hpp  tuple.hpp  variant.hpp
include/mpark/: config.hpp  cpp17.hpp  in_place.hpp  lib.hpp  variant.hpp
include/variant/: access.hpp  bad_variant_access.hpp  hash.hpp  in_place.hpp  monostate.hpp  rel.hpp  swap.hpp  variant.hpp  visit.hpp
master/: variant.hpp
runtime/: multi-boost.cpp  multi-variant.cpp  multi-visitation.py  single-boost.cpp  single-union.cpp  single-variant.cpp  single-visitation.py
support/: appveyor.py  single-header.py  travis.py  wandbox.cpp  wandbox.py
test/: CMakeLists.txt  README.md  access.get.cpp  access.get_if.cpp  access.holds_alternative.cpp  apply.test.cpp  assign.conversion.cpp  assign.copy.cpp  assign.emplace.cpp  assign.fwd.cpp  assign.move.cpp  assign.ref.test.cpp  assign.test.cpp  assign.val.test.cpp  cnstr.conversion.cpp  cnstr.copy.cpp  cnstr.default.cpp  cnstr.diamond.test.cpp  cnstr.in_place.cpp  cnstr.move.cpp  cnstr.ref.test.cpp  cnstr.test.cpp  cnstr.val.test.cpp  ctor.copy.cpp  ctor.default.cpp  ctor.fwd.cpp  ctor.in_place.cpp  ctor.move.cpp  dtor.cpp  dtor.test.cpp  get.cpp  get.test.cpp  hash.cpp  hash.test.cpp  intro.cpp  intro.test.cpp  issue.cpp  json.cpp  libcxx.sh  mod.cpp  (+8 more)
test/googletest-download/: CMakeLists.txt.in
test/googletest_download/: CMakeLists.txt.in
visit.1/: CMakeLists.txt  anthonyw.cpp.erb  boost.cpp.erb  compile.anthonyw.cpp.erb  compile.boost.cpp.erb  compile.eggs.cpp.erb  compile.juice.cpp.erb  compile.mapbox.cpp.erb  compile.mpark.cpp.erb  compile.pdimov.cpp.erb  compile.std.cpp.erb  eggs.cpp.erb  execute.anthonyw.cpp  execute.boost.cpp  execute.eggs.cpp  execute.juice.cpp  execute.mapbox.cpp  execute.mpark.cpp  execute.pdimov.cpp  execute.std.cpp  juice.cpp.erb  mapbox.cpp.erb  mpark.cpp.erb  pdimov.cpp.erb  std.cpp.erb
visit.2.equal/: CMakeLists.txt  anthonyw.cpp.erb  boost.cpp.erb  compile.anthonyw.cpp.erb  compile.boost.cpp.erb  compile.eggs.cpp.erb  compile.juice.cpp.erb  compile.mapbox.cpp.erb  compile.mpark.cpp.erb  compile.pdimov.cpp.erb  compile.std.cpp.erb  eggs.cpp.erb  juice.cpp.erb  mapbox.cpp.erb  mpark.cpp.erb  pdimov.cpp.erb  std.cpp.erb
visit.2.hetero/: CMakeLists.txt  anthonyw.cpp.erb  boost.cpp.erb  std.cpp.erb
visit.2.homo/: CMakeLists.txt  eggs.cpp.erb  mapbox.cpp.erb
visit.2.mixed/: CMakeLists.txt  anthonyw.cpp.erb  boost.cpp.erb  compile.anthonyw.cpp.erb  compile.boost.cpp.erb  compile.eggs.cpp.erb  compile.juice.cpp.erb  compile.mpark.cpp.erb  compile.pdimov.cpp.erb  compile.std.cpp.erb  eggs.cpp.erb  juice.cpp.erb  mpark.cpp.erb  pdimov.cpp.erb  std.cpp.erb
(+1803 files in other folders)
