cmake_minimum_required(VERSION 2.8)

add_compiler_flag(WALL -Wall)
add_compiler_flag(WEXTRA -Wextra)
add_compiler_flag(WERROR -Werror)

function(add_gtest name)
  add_executable(${name} ${name}.cpp)
  target_link_libraries(${name} gtest gtest_main pthread)
  add_test(${name} ${name} --gtest_color=yes)
endfunction(add_gtest)

add_gtest(access.get)
add_gtest(access.get_if)
add_gtest(access.holds_alternative)
add_gtest(assign.copy)
add_gtest(assign.conversion)
add_gtest(assign.emplace)
add_gtest(assign.move)
add_gtest(cnstr.copy)
add_gtest(cnstr.conversion)
add_gtest(cnstr.default)
add_gtest(cnstr.in_place)
add_gtest(cnstr.move)
add_gtest(dtor)
add_gtest(hash)
add_gtest(intro)
add_gtest(rel)
add_gtest(swap)
add_gtest(visit)
